WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260498
TextBreakIteratorCache shouldn't be used from worker threads
https://bugs.webkit.org/show_bug.cgi?id=260498
Summary
TextBreakIteratorCache shouldn't be used from worker threads
Matt Woodrow
Reported
2023-08-21 17:48:43 PDT
<
rdar://113654067
> TextBreakIteratorCache is a global singleton, so we shouldn't try to use it from Worker threads.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2023-08-21 17:52:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16913
EWS
Comment 2
2023-08-22 19:55:32 PDT
Committed
267175@main
(3e4dfc234c15): <
https://commits.webkit.org/267175@main
> Reviewed commits have been landed. Closing PR #16913 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug