TextBreakIteratorCache shouldn't be used from worker threads. https://bugs.webkit.org/show_bug.cgi?id=260498 <rdar://113654067>

Reviewed by David Kilzer.

An alternative here would be to have a cache per-thread, but I'm not aware of an easy way to
store thread local data from WTF currently.

This just skips the cache for non-main threads, and we can consider adding it back as needed
for performance in the future.

* Source/WTF/wtf/text/TextBreakIterator.h:
(WTF::CachedTextBreakIterator::CachedTextBreakIterator):
(WTF::CachedTextBreakIterator::~CachedTextBreakIterator):

Canonical link: https://commits.webkit.org/267175@main